--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ body {
   align-items: center;
 }
 
+.icons {
+  background-color: wheat;
+  border-radius: 5px;
+}
+
 .container {
   text-align: center;
   padding: 20px;
